# Mesa_classic

./: .gitignore  d3d11minoffscreen.cpp  osmesa_configure.txt
Mesa-2.6/: FUTURE  IAFA-PACKAGE  MESAFX.BAT  Make-config  Makefile  Makefile.mgl  Makefile.win  Names.win  README.3DFX  README.BEOS  README.THREADS  README.WIN  README.WIN32  RELNOTES  VERSIONS  descrip.mms  mesaw32.BAT  mesawin32.mak
Mesa-2.6/OpenStep/: Makefile  README
Mesa-2.6/OpenStep/MesaView/: Makefile  MesaView.h  mesadraw.c  mesadraw.h
Mesa-2.6/WIN32/: Mesa32.dsp  MesaDemos-3dfx.dsw  MesaDemos-3dfx.opt  MesaDemos-book.dsw  MesaDemos-book.opt  MesaDemos-demos.dsw  MesaDemos-demos.opt  MesaDemos-samples.dsw  MesaDemos-samples.opt  MesaLib.dsw  MesaLib.opt  MesaTk32.dsp  aux32.dsp  fxMesa32.dsp  glu32.dsp  glut32.dsp  mesa.dsp  mesaaux.dsp  mesaaux32.dsp  mesaglu.dsp  mesaglu32.dsp  mesaglut32.dsp  mesatk.dsp  nmake.mak  nmake.mif  opengl32.dsp  s3Mesa32.dsp  tk32.dsp
Mesa-2.6/WIN32/3dfx/: tunnel.dsp
Mesa-2.6/WIN32/book/: accanti.dsp  teapots.dsp
Mesa-2.6/WIN32/demos/: bounce.dsp  gears.dsp
Mesa-2.6/WIN32/rules/: lib.aux32  lib.fxmesa32  lib.fxmesaglu32  lib.fxmesaglut32  lib.fxmesatk32  lib.glu32  lib.glut32  lib.mesa  lib.mesa.core  lib.mesa32  lib.mesaaux  lib.mesaaux.core  lib.mesaaux32  lib.mesaglu  lib.mesaglu.core  lib.mesaglu32  lib.mesaglut.core  lib.mesaglut32  lib.mesatk  lib.mesatk.core  lib.mesatk32  lib.opengl32  lib.s3mesa32  lib.tk32  progs.3dfx.demos  progs.3dfx.demos.fire  progs.3dfx.demos.teapot  progs.3dfx.demos.tunnel  progs.book  progs.demos  progs.samples
Mesa-2.6/WIN32/samples/: olympic.dsp
Mesa-2.6/demos/: Makefile  Makefile.cygnus  Makefile.win  bounce.c  clearspd.c  descrip.mms  drawpix.c  gears.c  glinfo.c  glutfx.c  isosurf.c  morph3d.c  osdemo.c  paltex.c  pointblast.c  reflect.c  spectex.c  stex3d.c  tessdemo.c  texcyl.c  texobj.c  trispd.c  winpos.c
Mesa-2.6/include/GL/: dosmesa.h  mglmesa.h
Mesa-2.6/src/: CMakeLists.txt  Imakefile  Makefile.BeOS  Makefile.DJ  Makefile.DOS  Makefile.NeXT  Makefile.OpenStep  Makefile.cygnus  Makefile.fx  Makefile.win  MesaGL.def  MesaGLos2.rsp  asm-386.S  descrip.mms  fxopengl.def  halftone.c  halftone.h  main.cpp  mgl.h  mglmesa.c  mmesa16.c  mmesa24.c  mmesa32.c  mmesa8.c  mmesai.c  mmesap.h  mms_depend
Mesa-2.6/src-glu/: Makefile.NeXT  Makefile.OpenStep  Makefile.win
Mesa-2.6/src-glut/: Makefile  glut_event.c  glut_overlay.c  glutint.h
Mesa-2.6/widgets-mesa/: README  configure.in  configure.in.orig
Mesa-2.6/widgets-mesa/demos/: Makefile.in  Makefile.in.orig  tea.c
Mesa-2.6/widgets-mesa/include/GL/: Makefile  MesaDrawingArea.h
Mesa-2.6/widgets-mesa/man/: Makefile.in
Mesa-2.6/widgets-mesa/src/: GLwMMakeCurrent.c  Makefile.in
Mesa-7.0.2/: CMakeLists.txt  main.cpp
Mesa-7.4.4/: CMakeLists.txt  glad.cpp  glad.h  main.cpp
Mesa-7.4.4/src/glu/sgi/libnurbs/interface/: mystdio.h
Mesa-7.4.4/src/glu/sgi/libnurbs/internals/: bufpool.h  myassert.h  mymath.h
SB4_Src/: link.xml
SB4_Src/chapter20/: main.m
TrenkiSoftRenderer/: CMakeLists.txt
TrenkiSoftRenderer/docs/RasDemo/: Polygon Rasterization.html
TrenkiSoftRenderer/docs/RasDemo/Polygon Rasterization_files/: app_style.css  canvasImage.js  edgeFlag.js  geo.js  lib.js  main.js  pineda.js  scanline.js  template.js
TrenkiSoftRenderer/src/examples/: Box.cpp
TrenkiSoftRenderer/src/renderer/: CMakeLists.txt
Xquartz_app/: CMakeLists.txt  main.cpp
microui/: CMakeLists.txt  main.cpp  mainsdldemo.cpp  microui.c  microui.h  renderer.cpp  renderer.h
