cmake_minimum_required(VERSION 3.11)
project(mesa7)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
		${CMAKE_CURRENT_SOURCE_DIR}/src/mesa/
		${CMAKE_CURRENT_SOURCE_DIR}/src/mesa/main
		${CMAKE_CURRENT_SOURCE_DIR}/src/mesa/glapi
		${CMAKE_CURRENT_SOURCE_DIR}/src/mesa/shader
		${CMAKE_CURRENT_SOURCE_DIR}/src/mesa/shader/slang
		${CMAKE_CURRENT_SOURCE_DIR}/src/mesa/shader/grammar
		)

add_executable(mesa3d7
		src/mesa/main/accum.c
		src/mesa/main/api_arrayelt.c
		src/mesa/main/api_exec.c
		src/mesa/main/api_loopback.c
		src/mesa/main/api_noop.c
		src/mesa/main/api_validate.c
		src/mesa/shader/arbprogparse.c
		src/mesa/shader/arbprogram.c
		src/mesa/main/arrayobj.c
		src/mesa/shader/atifragshader.c
		src/mesa/main/attrib.c
		src/mesa/main/blend.c
		src/mesa/main/bufferobj.c
		src/mesa/main/buffers.c
		src/mesa/main/clear.c
		src/mesa/main/clip.c
		src/mesa/main/colortab.c
		src/mesa/main/context.c
		src/mesa/main/convolve.c
		src/mesa/main/debug.c
		src/mesa/main/depth.c
		src/mesa/main/depthstencil.c
		src/mesa/main/dispatch.c
		src/mesa/main/dlist.c
		src/mesa/main/dlopen.c
		src/mesa/main/drawpix.c
		src/mesa/main/enable.c
		src/mesa/main/enums.c
		src/mesa/main/eval.c
		src/mesa/main/execmem.c
		src/mesa/main/extensions.c
		src/mesa/main/fbobject.c
		src/mesa/main/feedback.c
		src/mesa/main/ffvertex_prog.c
		src/mesa/main/fog.c
		src/mesa/main/framebuffer.c
		src/mesa/main/get.c
		src/mesa/main/getstring.c
		src/mesa/glapi/glapi.c
		src/mesa/glapi/glapi_getproc.c
		src/mesa/glapi/glthread.c
		#src/mesa/shader/grammar/grammar.c
		#src/mesa/shader/grammar/grammar_crt.c
		src/mesa/shader/grammar/grammar_mesa.c
		src/mesa/main/hash.c
		src/mesa/main/hint.c
		src/mesa/main/histogram.c
		src/mesa/main/image.c
		src/mesa/main/imports.c
		src/mesa/main/light.c
		src/mesa/main/lines.c
		src/mesa/math/m_debug_clip.c
		src/mesa/math/m_debug_norm.c
		src/mesa/math/m_debug_xform.c
		src/mesa/math/m_eval.c
		src/mesa/math/m_matrix.c
		src/mesa/math/m_translate.c
		src/mesa/math/m_vector.c
		src/mesa/math/m_xform.c
		src/mesa/main/matrix.c
		src/mesa/main/mipmap.c
		src/mesa/main/mm.c
		src/mesa/main/multisample.c
		src/mesa/shader/nvfragparse.c
		src/mesa/shader/nvprogram.c
		src/mesa/shader/nvvertparse.c
		src/mesa/main/pixel.c
		src/mesa/main/pixelstore.c
		src/mesa/main/points.c
		src/mesa/main/polygon.c
		src/mesa/shader/prog_cache.c
		src/mesa/shader/prog_debug.c
		src/mesa/shader/prog_execute.c
		src/mesa/shader/prog_instruction.c
		src/mesa/shader/prog_noise.c
		src/mesa/shader/prog_parameter.c
		src/mesa/shader/prog_print.c
		src/mesa/shader/prog_statevars.c
		src/mesa/shader/prog_uniform.c
		src/mesa/shader/program.c
		src/mesa/shader/programopt.c
		src/mesa/main/queryobj.c
		src/mesa/main/rastpos.c
		src/mesa/main/rbadaptors.c
		src/mesa/main/readpix.c
		src/mesa/main/renderbuffer.c
		src/mesa/swrast/s_aaline.c
		src/mesa/swrast/s_aatriangle.c
		src/mesa/swrast/s_accum.c
		src/mesa/swrast/s_alpha.c
		src/mesa/swrast/s_atifragshader.c
		src/mesa/swrast/s_bitmap.c
		src/mesa/swrast/s_blend.c
		src/mesa/swrast/s_blit.c
		src/mesa/swrast/s_buffers.c
		src/mesa/swrast/s_context.c
		src/mesa/swrast/s_copypix.c
		src/mesa/swrast/s_depth.c
		src/mesa/swrast/s_drawpix.c
		src/mesa/swrast/s_feedback.c
		src/mesa/swrast/s_fog.c
		src/mesa/swrast/s_fragprog.c
		src/mesa/swrast/s_imaging.c
		src/mesa/swrast/s_lines.c
		src/mesa/swrast/s_logic.c
		src/mesa/swrast/s_masking.c
		src/mesa/swrast/s_points.c
		src/mesa/swrast/s_readpix.c
		src/mesa/swrast/s_span.c
		src/mesa/swrast/s_stencil.c
		src/mesa/swrast/s_texcombine.c
		src/mesa/swrast/s_texfilter.c
		src/mesa/swrast/s_texstore.c
		src/mesa/swrast/s_triangle.c
		src/mesa/swrast/s_zoom.c
		src/mesa/main/scissor.c
		src/mesa/shader/shader_api.c
		src/mesa/main/shaders.c
		src/mesa/shader/slang/slang_builtin.c
		src/mesa/shader/slang/slang_codegen.c
		src/mesa/shader/slang/slang_compile.c
		src/mesa/shader/slang/slang_compile_function.c
		src/mesa/shader/slang/slang_compile_operation.c
		src/mesa/shader/slang/slang_compile_struct.c
		src/mesa/shader/slang/slang_compile_variable.c
		src/mesa/shader/slang/slang_emit.c
		src/mesa/shader/slang/slang_ir.c
		src/mesa/shader/slang/slang_label.c
		src/mesa/shader/slang/slang_link.c
		src/mesa/shader/slang/slang_log.c
		src/mesa/shader/slang/slang_mem.c
		src/mesa/shader/slang/slang_preprocess.c
		src/mesa/shader/slang/slang_print.c
		src/mesa/shader/slang/slang_simplify.c
		src/mesa/shader/slang/slang_storage.c
		src/mesa/shader/slang/slang_typeinfo.c
		src/mesa/shader/slang/slang_utility.c
		src/mesa/shader/slang/slang_vartable.c
		src/mesa/swrast_setup/ss_context.c
		src/mesa/swrast_setup/ss_triangle.c
		src/mesa/main/state.c
		src/mesa/main/stencil.c
		src/mesa/tnl/t_context.c
		src/mesa/tnl/t_draw.c
		src/mesa/tnl/t_pipeline.c
		src/mesa/tnl/t_rasterpos.c
		src/mesa/tnl/t_vb_cull.c
		src/mesa/tnl/t_vb_fog.c
		src/mesa/tnl/t_vb_light.c
		src/mesa/tnl/t_vb_normals.c
		src/mesa/tnl/t_vb_points.c
		src/mesa/tnl/t_vb_program.c
		src/mesa/tnl/t_vb_render.c
		src/mesa/tnl/t_vb_texgen.c
		src/mesa/tnl/t_vb_texmat.c
		src/mesa/tnl/t_vb_vertex.c
		src/mesa/tnl/t_vertex.c
		src/mesa/tnl/t_vertex_generic.c
		src/mesa/tnl/t_vp_build.c
		src/mesa/main/texcompress.c
		src/mesa/main/texcompress_fxt1.c
		src/mesa/main/texcompress_s3tc.c
		src/mesa/main/texenv.c
		src/mesa/main/texenvprogram.c
		src/mesa/main/texformat.c
		src/mesa/main/texgen.c
		src/mesa/main/teximage.c
		src/mesa/main/texobj.c
		src/mesa/main/texparam.c
		src/mesa/main/texrender.c
		src/mesa/main/texstate.c
		src/mesa/main/texstore.c
		src/mesa/main/varray.c
		src/mesa/vbo/vbo_context.c
		src/mesa/vbo/vbo_exec.c
		src/mesa/vbo/vbo_exec_api.c
		src/mesa/vbo/vbo_exec_array.c
		src/mesa/vbo/vbo_exec_draw.c
		src/mesa/vbo/vbo_exec_eval.c
		src/mesa/vbo/vbo_rebase.c
		src/mesa/vbo/vbo_save.c
		src/mesa/vbo/vbo_save_api.c
		src/mesa/vbo/vbo_save_draw.c
		src/mesa/vbo/vbo_save_loopback.c
		src/mesa/vbo/vbo_split.c
		src/mesa/vbo/vbo_split_copy.c
		src/mesa/vbo/vbo_split_inplace.c
		#src/mesa/main/vsnprintf.c
		src/mesa/main/vtxfmt.c
		src/mesa/main/accum.h
		src/mesa/main/api_arrayelt.h
		#src/mesa/main/api_eval.h
		src/mesa/main/api_exec.h
		src/mesa/main/api_loopback.h
		src/mesa/main/api_noop.h
		src/mesa/main/api_validate.h
		src/mesa/shader/arbprogparse.h
		src/mesa/shader/arbprogram.h
		src/mesa/shader/arbprogram_syn.h
		src/mesa/main/arrayobj.h
		src/mesa/shader/atifragshader.h
		src/mesa/main/attrib.h
		src/mesa/main/bitset.h
		src/mesa/main/blend.h
		src/mesa/main/bufferobj.h
		src/mesa/main/buffers.h
		src/mesa/main/clear.h
		src/mesa/main/clip.h
		src/mesa/main/colormac.h
		src/mesa/main/colortab.h
		src/mesa/main/config.h
		src/mesa/main/context.h
		src/mesa/main/convolve.h
		src/mesa/main/dd.h
		src/mesa/main/debug.h
		src/mesa/main/depth.h
		src/mesa/main/depthstencil.h
		src/mesa/main/dlist.h
		src/mesa/main/dlopen.h
		src/mesa/main/drawpix.h
		src/mesa/main/enable.h
		src/mesa/main/enums.h
		src/mesa/main/eval.h
		src/mesa/main/extensions.h
		src/mesa/main/fbobject.h
		src/mesa/main/feedback.h
		src/mesa/main/ffvertex_prog.h
		src/mesa/main/fog.h
		src/mesa/main/framebuffer.h
		src/mesa/main/get.h
		src/mesa/glapi/glapi.h
		src/mesa/glapi/glapioffsets.h
		src/mesa/glapi/glapitable.h
		src/mesa/glapi/glapitemp.h
		src/mesa/main/glheader.h
		src/mesa/glapi/glprocs.h
		src/mesa/glapi/glthread.h
		src/mesa/shader/grammar/grammar.h
		src/mesa/shader/grammar/grammar_crt.h
		src/mesa/shader/grammar/grammar_mesa.h
		src/mesa/shader/grammar/grammar_syn.h
		src/mesa/main/hash.h
		src/mesa/main/hint.h
		src/mesa/main/histogram.h
		src/mesa/main/image.h
		src/mesa/main/imports.h
		src/mesa/main/light.h
		src/mesa/main/lines.h
		src/mesa/math/m_clip_tmp.h
		src/mesa/math/m_copy_tmp.h
		src/mesa/math/m_debug.h
		src/mesa/math/m_debug_util.h
		src/mesa/math/m_dotprod_tmp.h
		src/mesa/math/m_eval.h
		src/mesa/math/m_matrix.h
		src/mesa/math/m_norm_tmp.h
		src/mesa/math/m_trans_tmp.h
		src/mesa/math/m_translate.h
		src/mesa/math/m_vector.h
		src/mesa/math/m_xform.h
		src/mesa/math/m_xform_tmp.h
		src/mesa/main/macros.h
		src/mesa/math/mathmod.h
		src/mesa/main/matrix.h
		#src/mesa/main/mcompiler.h
		src/mesa/main/mfeatures.h
		src/mesa/main/mipmap.h
		src/mesa/main/mm.h
		src/mesa/main/mtypes.h
		src/mesa/main/multisample.h
		src/mesa/shader/nvfragparse.h
		src/mesa/shader/nvprogram.h
		src/mesa/shader/nvvertparse.h
		src/mesa/main/pixel.h
		src/mesa/main/pixelstore.h
		src/mesa/main/points.h
		src/mesa/main/polygon.h
		src/mesa/shader/prog_debug.h
		src/mesa/shader/prog_execute.h
		src/mesa/shader/prog_instruction.h
		src/mesa/shader/prog_noise.h
		src/mesa/shader/prog_parameter.h
		src/mesa/shader/prog_print.h
		src/mesa/shader/prog_statevars.h
		src/mesa/shader/prog_uniform.h
		src/mesa/shader/program.h
		src/mesa/shader/programopt.h
		src/mesa/main/queryobj.h
		src/mesa/main/rastpos.h
		src/mesa/main/rbadaptors.h
		src/mesa/main/readpix.h
		src/mesa/main/renderbuffer.h
		src/mesa/swrast/s_aaline.h
		src/mesa/swrast/s_aalinetemp.h
		src/mesa/swrast/s_aatriangle.h
		src/mesa/swrast/s_aatritemp.h
		src/mesa/swrast/s_accum.h
		src/mesa/swrast/s_alpha.h
		src/mesa/swrast/s_atifragshader.h
		src/mesa/swrast/s_blend.h
		src/mesa/swrast/s_context.h
		src/mesa/swrast/s_depth.h
		#src/mesa/swrast/s_drawpix.h
		src/mesa/swrast/s_feedback.h
		src/mesa/swrast/s_fog.h
		src/mesa/swrast/s_fragprog.h
		src/mesa/swrast/s_lines.h
		src/mesa/swrast/s_linetemp.h
		src/mesa/swrast/s_logic.h
		src/mesa/swrast/s_masking.h
		src/mesa/swrast/s_points.h
		#src/mesa/swrast/s_pointtemp.h
		src/mesa/swrast/s_span.h
		src/mesa/swrast/s_spantemp.h
		src/mesa/swrast/s_stencil.h
		src/mesa/swrast/s_texcombine.h
		src/mesa/swrast/s_texfilter.h
		src/mesa/swrast/s_triangle.h
		src/mesa/swrast/s_trispan.h
		src/mesa/swrast/s_tritemp.h
		src/mesa/swrast/s_zoom.h
		src/mesa/main/scissor.h
		src/mesa/shader/shader_api.h
		src/mesa/main/shaders.h
		src/mesa/main/simple_list.h
		src/mesa/shader/slang/slang_builtin.h
		src/mesa/shader/slang/slang_codegen.h
		src/mesa/shader/slang/slang_compile.h
		src/mesa/shader/slang/slang_compile_function.h
		src/mesa/shader/slang/slang_compile_operation.h
		src/mesa/shader/slang/slang_compile_struct.h
		src/mesa/shader/slang/slang_compile_variable.h
		src/mesa/shader/slang/slang_emit.h
		src/mesa/shader/slang/slang_ir.h
		src/mesa/shader/slang/slang_label.h
		src/mesa/shader/slang/slang_link.h
		src/mesa/shader/slang/slang_log.h
		src/mesa/shader/slang/slang_mem.h
		src/mesa/shader/slang/slang_preprocess.h
		src/mesa/shader/slang/slang_print.h
		src/mesa/shader/slang/slang_simplify.h
		src/mesa/shader/slang/slang_storage.h
		src/mesa/shader/slang/slang_typeinfo.h
		src/mesa/shader/slang/slang_utility.h
		src/mesa/shader/slang/slang_vartable.h
		src/mesa/swrast_setup/ss_context.h
		src/mesa/swrast_setup/ss_triangle.h
		src/mesa/swrast_setup/ss_tritmp.h
		src/mesa/swrast_setup/ss_vb.h
		src/mesa/main/state.h
		src/mesa/main/stencil.h
		src/mesa/swrast/swrast.h
		src/mesa/swrast_setup/swrast_setup.h
		src/mesa/tnl/t_context.h
		src/mesa/tnl/t_pipeline.h
		src/mesa/tnl/t_vb_cliptmp.h
		src/mesa/tnl/t_vb_lighttmp.h
		src/mesa/tnl/t_vb_rendertmp.h
		src/mesa/tnl/t_vertex.h
		src/mesa/tnl/t_vp_build.h
		src/mesa/main/texcompress.h
		src/mesa/main/texenv.h
		src/mesa/main/texenvprogram.h
		src/mesa/main/texformat.h
		src/mesa/main/texformat_tmp.h
		src/mesa/main/texgen.h
		src/mesa/main/teximage.h
		src/mesa/main/texobj.h
		src/mesa/main/texparam.h
		src/mesa/main/texrender.h
		src/mesa/main/texstate.h
		src/mesa/main/texstore.h
		src/mesa/tnl/tnl.h
		src/mesa/main/varray.h
		src/mesa/vbo/vbo.h
		src/mesa/vbo/vbo_attrib.h
		src/mesa/vbo/vbo_attrib_tmp.h
		src/mesa/vbo/vbo_context.h
		src/mesa/vbo/vbo_exec.h
		src/mesa/vbo/vbo_save.h
		src/mesa/vbo/vbo_split.h
		src/mesa/main/version.h
		src/mesa/main/vtxfmt.h
		src/mesa/main/vtxfmt_tmp.h

#OSMESA
src/mesa/drivers/common/driverfuncs.c
src/mesa/drivers/osmesa/osmesa.c
src/mesa/drivers/osmesa/osmesa.def

#glad
		glad.h
		glad.cpp

main.cpp
		)